--- a/deps/decorator/debian/changelog
+++ b/deps/decorator/debian/changelog
@@ -1,4 +1,4 @@
-decorator (3.3.3-1) unstable; urgency=low
+python-decorator (3.3.3-1) unstable; urgency=low
 
   * source package automatically created by stdeb 0.6.0
 
