Fixed stdeb dependencies. Added desktop file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-pygpmp (0.1-1) unstable; urgency=low
+pygpmp (0.2-1) unstable; urgency=low
 
   * source package automatically created by stdeb 0.6.0
 
- -- Michal Odnous <odi.root@gmail.com>  Sun, 06 Jan 2013 15:51:22 +0100
+ -- Michal Odnous  Sun, 06 Jan 2013 16:11:57 +0100
