Fixed rules file indendation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ pygpmp (0.2-1) unstable; urgency=low
 
   * source package automatically created by stdeb 0.6.0
 
- -- Michal Odnous  Sun, 06 Jan 2013 16:11:57 +0100
+ -- Michal Odnous <odi.root@gmail.com>  Sun, 06 Jan 2013 16:15:38 +0100
